--- a/package.json
+++ b/package.json
@@ -9,9 +9,14 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@headlessui/react": "^1.7.17",
+    "@heroicons/react": "^2.0.18",
+    "lightbox.js-react": "^0.9.8",
+    "next": "14.0.4",
     "react": "^18",
     "react-dom": "^18",
-    "next": "14.0.4"
+    "use-debounce": "^10.0.0",
+    "yet-another-react-lightbox": "^3.15.6"
   },
   "devDependencies": {
     "autoprefixer": "^10.0.1",
